---------------------------------------------------------------------------
Version 5.8.10  [V5-stable] 2012-??-??
- bugfix: memory leak in array passing output module mode
---------------------------------------------------------------------------
Version 5.8.9  [V5-stable] 2012-03-15
- added tool to recover disk queue if .qi file is missing (recover_qi.pl)
  Thanks to Kaiwang Chen for contributing this tool
- bugfix: stopped DA queue was never processed after a restart due to a
  regression from statistics module
- added better doc for statsobj interface
  Thanks to Kaiwang Chen for his suggestions and analysis in regard to the
  stats subsystem.
---------------------------------------------------------------------------
Version 5.8.8  [V5-stable] 2012-03-05
- bugfix: omprog made rsyslog abort on startup if not binary to
  execute was configured
- bugfix: imklog invalidly computed facility and severity
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=313
---------------------------------------------------------------------------
Version 5.8.7  [V5-stable] 2012-01-17
- bugfix: instabilities when using RFC5424 header fields
  Thanks to Kaiwang Chen for the patch
- bugfix: imuxsock did truncate part of received message if it did not
  contain a proper date. The truncation occured because we removed that
  part of the messages that was expected to be the date.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=295
- bugfix: potential abort after reading invalid X.509 certificate
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=290
  Thanks to Tomas Heinrich for the patch
- bugfix: stats counter were not properly initialized on creation
- FQDN hostname for multihomed host was not always set to the correct name
  if multiple aliases existed. Thanks to Tomas Heinreich for the patch.
- re-licensed larger parts of the codebase under the Apache license 2.0
---------------------------------------------------------------------------